fix: topics attached to posts should be visible above related articles

--- a/blocks/side-navigation/side-navigation.css
+++ b/blocks/side-navigation/side-navigation.css
@@ -36,6 +36,10 @@
   margin-bottom: 40px;
 }
 
+.side-navigation .related-posts{
+  margin-top: 40px;
+}
+
 .side-navigation .related-posts .title{
   margin-bottom: 10px;
   text-transform: uppercase;
